--- a/ng-app/src/app/event/register-event/register-event.component.html
+++ b/ng-app/src/app/event/register-event/register-event.component.html
@@ -51,7 +51,7 @@
         <div *ngIf="mode === 'submitted'">
             Congratulation! You're registered the event successfully.
             <!-- <qrcode id="attendee_qrcode" [qrdata]="attendee?.code" [size]="256" [level]="'H'"></qrcode> -->
-            Click <a href="{{qrcodeLink}}" download (click)="dlDataUrlBin()">here</a> to downlaod the QR Code.
+            <!-- Click <a href="{{qrcodeLink}}" download (click)="dlDataUrlBin()">here</a> to downlaod the QR Code. -->
         </div>
     </mat-card-content>
     <mat-card-actions>
