--- a/ng-app/src/app/event/register-event/register-event.component.html
+++ b/ng-app/src/app/event/register-event/register-event.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-md">
+<mat-card class="card-md" *ngIf="registrationForm">
     <mat-card-header>
         <mat-card-title>{{ registrationForm.title }}</mat-card-title>
         <mat-card-subtitle>
