--- a/ng-app/src/app/provider/category-view/category-view.component.html
+++ b/ng-app/src/app/provider/category-view/category-view.component.html
@@ -1,6 +1,6 @@
-<div class="mat-display-1">View Category <span *ngIf="category._id">- {{ category.name }}</span></div>
+<div class="mat-display-1">View Category <span *ngIf="category">- {{ category.name }}</span></div>
 
-<mat-tab-group>
+<mat-tab-group *ngIf="category">
   <mat-tab label="Basic Information">
     <mat-card>
       <mat-card-content>
@@ -21,6 +21,14 @@
     <mat-card *ngFor="let providerFacilitie of providerFacilities">
       <mat-card-content>
         <app-standard-display-field [field]="displayField" [formData]="providerFacilitie" *ngFor="let displayField of itemDisplayFields">
+        </app-standard-display-field>
+      </mat-card-content>
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="Stock Items">
+    <mat-card *ngFor="let stockItem of stockItems">
+      <mat-card-content>
+        <app-standard-display-field [field]="displayField" [formData]="stockItem" *ngFor="let displayField of itemDisplayFields">
         </app-standard-display-field>
       </mat-card-content>
     </mat-card>
