event plan list > columns

--- a/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
+++ b/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
@@ -3,7 +3,8 @@
     title="Event Plan" 
     [columns]="columns" 
     [filterList]="filterList"
-    [actions]="actions">
+    [actions]="actions"
+    [includes]="includes">
 </app-standard-list>
 
 <ng-template #generateEventForm>
