--- a/ng-app/src/app/inventory/stock-item-view/stock-item-view.component.html
+++ b/ng-app/src/app/inventory/stock-item-view/stock-item-view.component.html
@@ -7,7 +7,7 @@
     </app-standard-display-field>
   </mat-card-content>
 </mat-card>
-<h1>Stock Item</h1>
+<!-- <h1>Stock Item</h1>
 <pre>{{ stockItem | json }}</pre>
 <h1>Stock Transactions</h1>
-<pre>{{ stockTransactions | json }}</pre>
+<pre>{{ stockTransactions | json }}</pre> -->
