--- a/ng-app/src/app/standard/standard-form/standard-form.component.html
+++ b/ng-app/src/app/standard/standard-form/standard-form.component.html
@@ -15,7 +15,7 @@
           <mat-icon>done</mat-icon> Submit
         </button>
       </div>
-      <pre>{{ getFormErrors | json }}</pre>
+      <!-- <pre>{{ getFormErrors | json }}</pre> -->
     </form>
   </mat-card-content>
   <!-- <mat-card-actions>
