--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -1,18 +1,18 @@
 <div [(formGroup)]="form">
   <ng-container [ngSwitch]="field.type" *ngIf="isShow(field)">
     <mat-form-field *ngSwitchCase="'string'">
-      <input matInput [formControlName]="field.name" [name]="field.name" [placeholder]="field.displayName"
+      <input matInput [formControlName]="field.name" [attr.data-name]="field.name" [placeholder]="field.displayName"
         [required]="field.required" />
     </mat-form-field>
 
     <mat-form-field *ngSwitchCase="'textarea'">
       <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4" rows="4" [formControlName]="field.name"
-        [name]="field.name" [placeholder]="field.displayName" [required]="field.required"></textarea>
+        [attr.data-name]="field.name" [placeholder]="field.displayName" [required]="field.required"></textarea>
     </mat-form-field>
 
     <mat-form-field *ngSwitchCase="'textarea-autocomplete'">
       <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4" rows="4" [formControlName]="field.name"
-        [name]="field.name" [placeholder]="field.displayName" [required]="field.required"
+        [attr.data-name]="field.name" [placeholder]="field.displayName" [required]="field.required"
         [matAutocomplete]="textareaAutocomplete"></textarea>
 
       <mat-autocomplete #textareaAutocomplete="matAutocomplete" [displayWith]="displayFn"
@@ -23,14 +23,14 @@
     </mat-form-field>
 
     <mat-form-field *ngSwitchCase="'number'">
-      <input matInput [formControlName]="field.name" [name]="field.name" [placeholder]="field.displayName"
+      <input matInput [formControlName]="field.name" [attr.data-name]="field.name" [placeholder]="field.displayName"
         [required]="field.required" [max]="getInputMaxValue(field.max, formData)"
         (keyup)="getInputMaxValue(field.max, formData) && checkInputValid(getInputMaxValue(field.max, formData), $event.target)" />
       <!-- <pre>MAX: {{getInputMaxValue(field.max, formData)}}</pre> -->
     </mat-form-field>
 
     <div *ngSwitchCase="'boolean'">
-      <mat-checkbox [formControlName]="field.name" [name]="field.name">{{ field.displayName }}</mat-checkbox>
+      <mat-checkbox [formControlName]="field.name" [attr.data-name]="field.name">{{ field.displayName }}</mat-checkbox>
     </div>
 
     <div *ngSwitchCase="'date'">
@@ -57,7 +57,7 @@
     </mat-form-field>
 
     <mat-form-field *ngSwitchCase="'ref'">
-      <input type="text" matInput [formControlName]="field.name" [name]="field.name" [placeholder]="field.displayName"
+      <input type="text" matInput [formControlName]="field.name" [attr.data-name]="field.name" [placeholder]="field.displayName"
         [required]="field.required" [matAutocomplete]="textboxAutocomplete" />
 
       <mat-autocomplete #textboxAutocomplete="matAutocomplete" [displayWith]="displayFn"
