--- a/ng-app/src/app/standard/standard-filter/standard-filter.component.html
+++ b/ng-app/src/app/standard/standard-filter/standard-filter.component.html
@@ -13,6 +13,11 @@
         placeholder="Max">
     </mat-form-field>
   </div>
+  <!-- TODO add Duration filter  -->
+  <!-- TODO add Calender/Date Range filter  -->
+  <!-- TODO add Ref/Foreign Field filter  -->
+  <!-- TODO add Select/Options filter  -->
+  <!-- TODO add Numeric filter  -->
   <mat-form-field>
     <mat-label>Type</mat-label>
     <mat-select [(ngModel)]="selectedFilter" (valueChange)="onChangeFilter($event)">
